<resources>
    <string name="app_name">Virtual Blood Bank</string>
    <string name="title_activity_maps">Nearest Hospitals Map</string>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCMdPBwJ69g-3HXb8tpki1RpzC7mXOVrV0</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Events</string>
    <string name="nav_movies">Search donor</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_donor">Be a donor</string>
    <string name="nav_newsletters">Newsletters</string>
    <string name="nav_my_history">My donation History</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Events</item>
        <item>Search donor</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Be a donor</item>
        <item>Newsletters</item>
        <item>My donation History</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--Other string resources also defined in this file… -->
    <string name="blood_group">Select your blood Group</string>
    <string name="bloodgroup1">A+</string>
    <string name="bloodgroup2">A-</string>
    <string name="bloodgroup3">B+</string>
    <string name="bloodgroup4">B-</string>
    <string name="bloodgroup5">O+</string>
    <string name="bloodgroup6">O-</string>
    <string name="bloodgroup7">AB+</string>
    <string name="bloodgroup8">AB-</string>

    <string-array name="bloodgrouptypelist">
        <item>@string/bloodgroup1</item>
        <item>@string/bloodgroup2</item>
        <item>@string/bloodgroup3</item>
        <item>@string/bloodgroup4</item>
        <item>@string/bloodgroup5</item>
        <item>@string/bloodgroup6</item>
        <item>@string/bloodgroup7</item>
        <item>@string/bloodgroup8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->nav_why_donate_blood
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="virtual_bood_bank"><b> Virtual Bood Bank</b></string>
    <string name="kenya"><b>Kenya</b></string>
    <string name="notificationsnull">Sorry,\n you do not have\n any notifications</string>
    <string name="searchdonor">Under implementation\n\nhang on</string>
    <string name="nav_why_donate_blood">Why Donate?</string>
    <string name="nav_why_donate_blood_info">nnnnnnnn</string>
    <string name="nav_hall_of_fame">Hall of Fame</string>
    <string name="nav_who_is_eligible">Who is Eligible</string>
    <string name="i_want_to_donate">Be a Donor</string>
    <string name="newsletter">Newsletters</string>
    <string name="nav_my_donation_history">My donation History</string>
    <string name="feedbackbutton">feedbackbutton</string>
    <string name="feedbackresponse">feedbackresponse</string>
    <string name="feedbackbody">feedbackbody</string>
    <string name="feedbackemail">feedbackemail</string>
    <string name="feedbackname">feedbackname</string>
    <string name="feedbacktitle">User details</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_display">btn_display</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="nearestbloodbank"><b>*</b> Have you tried the nearest <b>BLOOD BANK/UNIT/HOSPITAL?</b>\n</string>
    <string name="title_activity_maps_donors">Map</string>
    <!--<string name="title_activity_maps">Map</string>-->
</resources>