<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_event_note_white_24dp"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_i_want_to_donate"
            android:icon="@drawable/ic_dehaze_white_24dp"
            android:title="@string/i_want_to_donate" />
        <item
            android:id="@+id/nav_newsletter"
            android:icon="@drawable/ic_textsms_white_24dp"
            android:title="@string/newsletter" />
        <item
            android:id="@+id/nav_mydonationhistory"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_my_donation_history" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_why_donate_blood"
                android:title="@string/nav_why_donate_blood" />
            <item
                android:id="@+id/nav_hall_of_fame"
                android:title="@string/nav_hall_of_fame" />
            <item
                android:id="@+id/nav_who_is_eligible"
                android:title="@string/nav_who_is_eligible" />
        </menu>
    </item>

</menu>